--- a/api/package.json
+++ b/api/package.json
@@ -5,11 +5,17 @@
 	"main": "index.js",
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1",
-		"test:int": "jest src/test/*.test.ts --forceExit",
+		"test:int": "jest --forceExit",
 		"test:int:debug": "jest src/test/contract/*.test.ts --detectOpenHandles --watch --verbose=false --silent=false",
 		"build": "tsc --build",
 		"clean": "tsc --build --clean",
 		"lint": "tsc --noEmit && eslint '*/**/*.{js,ts}'"
+	},
+	"jest": {
+		"testMatch": [
+			"src/test/*.test.ts",
+			"src/test/**/*.test.ts"
+		]
 	},
 	"keywords": [
 		"api",
